--- a/user_data.bash.template
+++ b/user_data.bash.template
@@ -12,6 +12,10 @@ DB_DATA_VOLUME_ID="${db_data_volume_id}"
 
 echo "Installing Elements $${TAG} from $${REPO_URL}"
 
+# Createst groups and users for elements
+groupadd --system elements
+useradd --home-dir /opt/elements --system --gid elements --shell /sbin/nologin --no-create-home elements
+
 # Make mount points
 mkdir -p /mnt/db_data /mnt/logs /mnt/repos
 
@@ -34,6 +38,7 @@ chmod +x /usr/libexec/docker/cli-plugins/docker-compose
 systemctl enable --now docker
 
 # Add ec2-user to the docker group
+usermod -aG docker elements
 usermod -aG docker ec2-user
 
 # Verify Docker Compose installation
@@ -83,6 +88,10 @@ git -C /opt/elements checkout "$TAG"
 # Create the config directory
 mkdir -p /opt/elements/config
 
+# Sets all ownership such that the new user may access it
+chown -R elements:elements /opt/elements
+chown -R elements:elements /mnt/logs /mnt/repos /mnt/db_data
+
 # Configure the Elements application
 cat >/opt/elements/config/elements.properties <<EOF
 dev.getelements.elements.mongo.uri=mongodb://mongo:27017
@@ -113,7 +122,8 @@ Requires=docker.service
 
 [Service]
 Type=simple
-User=ec2-user
+User=elements
+Group=elements
 WorkingDirectory=/opt/elements
 ExecStart=/opt/elements/start-demon.bash
 ExecStop=/opt/elements/stop-demon.bash
